--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,19 +1,19 @@
 /* RESET */
 abbr,address,article,aside,audio,b,blockquote,body,canvas,caption,cite,code,dd,del,details,dfn,div,dl,dt,em,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,p,pre,q,samp,section,small,span,strong,summary,time,ul,var,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:0 0}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:0 0}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:700}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}
 
-button {
+button, .button {
   text-transform: capitalize;
   box-shadow: inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 6px rgba(0,0,0,.2);
   border: none;
   outline: 0;
-  padding: 15%;
+  padding: 6px;
   cursor: pointer;
   background: white;
 }
-button:hover {
+button:hover, .button:hover {
   box-shadow: inset 0 0 0 1px rgba(0,0,0,.3), inset 0 0 6px rgba(0,0,0,.4);
 }
-button.active {
+button.active, .button.active {
   box-shadow: inset 0 0 0 1px rgba(0,0,0,.5), inset 0 0 6px rgba(0,0,0,.6);
   background: #efefef;
 }
@@ -51,4 +51,22 @@ button.active {
     #ffffff 10px,
     #ffffff 20px
   );*/
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #cccccc; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
